--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@ li {
   border-radius: 5px;
 }
 
+.weather-today {
+  line-height: 1.2;
+}
+
 .day-time {
   margin-bottom: 8px;
 }
@@ -48,5 +52,5 @@ li {
 }
 
 .temperature-low-high {
-  font-size: 30px;
+  font-size: 20px;
 }
