Added a search form and search function
Created a form in HTML for search and submit. Created handleSubmit and search functions

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,12 @@ li {
 
 .day-time {
   margin-bottom: 8px;
+  display: inline;
+}
+
+.icon {
+  display: inline;
+  height: 50px;
 }
 
 .city-header {
