--- a/src/style.css
+++ b/src/style.css
@@ -11,12 +11,20 @@ li {
   list-style: none;
 }
 
-.weather-app {
-  max-width: 600px;
+.credits {
+  float: left;
+}
+
+div.weather-app {
+  max-width: 700px;
   margin: 30px auto;
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
+}
+
+.search-form {
+  margin-top: 12px;
 }
 
 .weather-today {
@@ -40,7 +48,7 @@ li {
 }
 
 .weather-description {
-  font-size: 30px;
+  font-size: 20px;
 }
 .weather-description::first-letter {
   text-transform: capitalize;
@@ -61,7 +69,7 @@ li {
 }
 
 .temperature-low-high {
-  font-size: 20px;
+  font-size: 17px;
 }
 
 .weather-today .active {
