--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ li {
 
 .credits {
 	float: left;
+	font-size: 10px;
 }
 
 div.weather-app {
@@ -21,6 +22,11 @@ div.weather-app {
 	padding: 20px;
 	border: 1px solid #dadde1;
 	border-radius: 5px;
+}
+
+.search-button {
+	background-color: #ec6e4c;
+	color: #fff;
 }
 
 .search-form {
@@ -80,12 +86,27 @@ div.weather-app {
 
 .weather-forecast {
 	text-align: center;
+
+	border-radius: 5px;
 }
 
 .weather-forecast-date {
-	font-size: 16px;
+	font-size: 12px;
 }
 
-.weather-forecast-tmperatures {
-	font-size: 13px;
+.weather-forecast-temperatures {
+	font-size: 10px;
+}
+
+.forecast-icon {
+	height: 40px;
+}
+
+.forecast-day {
+	padding: 10px 12px;
+	margin: 10px 0;
+}
+
+.load-image {
+	height: 100px;
 }
