--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,6 @@ body {
 	text-align: center;
 }
 
-ul {
-	padding: 0;
-}
-
-li {
-	list-style: none;
-}
-
 .credits {
 	float: left;
 	font-size: 10px;
@@ -27,6 +19,11 @@ div.weather-app {
 .search-button {
 	background-color: #ec6e4c;
 	color: #fff;
+	width: 100%;
+}
+
+.location-button {
+	background-color: #f2f2f1;
 }
 
 .search-form {
